--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -15,6 +15,6 @@
     <p>Welcome to your Electron application.</p>
     <p id="version"></p>
     <div id="root"></div>
-    <script type="module" src="/src/renderer.ts"></script>
+    <script type="module" src="/renderer.ts"></script>
   </body>
 </html>
