--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,15 +4,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>IPTVI</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <p id="version"></p>
     <div id="root"></div>
-    <script type="module" src="/renderer.ts"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
